--- a/index.html
+++ b/index.html
@@ -4,123 +4,112 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>THE LUXURY WORLD</title>
-  
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <style>
-
-body {
-  background-color: #312f2f;
-  color: #ffffff;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.navbar-custom {
-    background-color: #2c3e50; /* Dark Blue Background */
-}
-
-.navbar-custom .navbar-brand,
-.navbar-custom .nav-link {
-    color: #ecf0f1; /* Light Gray Text */
-}
-
-.navbar-custom .nav-link:hover {
-    color: #ebeff1; /* Bright Blue Text on Hover */
-}
-
-.card {
-  background-color: #1f1f1f;
-  border: none;
-  color: #fcf9f9;
-}
-
-.card .btn-primary {
-  background-color: #D4AF37;
-  border: none;
-  color: #fffdfd;
-}
-
-.card .btn-primary:hover {
-  background-color: #b9952f;
-}
-
-footer {
-  background-color: #1f1f1f;
-  color: #aaa;
-}
-
-footer a {
-  color: #D4AF37;
-  text-decoration: none;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
-
-
-
     body {
-    background-color: #1e2d3b; /* Dark Blue Background */
-  
+      background-color: #1e2d3b;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    .navbar-brand {
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: white;
+
+    .navbar-custom {
+      background-color: #2c3e50;
     }
-    .card img {
-      object-fit: cover;
+
+    .navbar-custom .navbar-brand,
+    .navbar-custom .nav-link {
+      color: #ecf0f1;
     }
+
+    .navbar-custom .nav-link:hover {
+      color: #ebeff1;
+    }
+
+    .card {
+      background-color: #1f1f1f;
+      border: none;
+      color: #fcf9f9;
+    }
+
+    .card .btn-primary {
+      background-color: #D4AF37;
+      border: none;
+      color: #fffdfd;
+    }
+
+    .card .btn-primary:hover {
+      background-color: #b9952f;
+    }
+
+    footer {
+      background-color: #1f1f1f;
+      color: #aaa;
+    }
+
     footer a {
+      color: #D4AF37;
       text-decoration: none;
     }
 
-  .carousel-inner {
-    height: 700px;
-  }
+    footer a:hover {
+      text-decoration: underline;
+    }
 
-  .carousel-inner img {
-    height: 100%;
-    object-fit: cover;
-  }
+    .card img {
+      object-fit: cover;
+    }
 
-  
+    .carousel-inner {
+      height: 700px;
+    }
 
-</style>
+    .carousel-inner img {
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @media (max-width: 768px) {
+      .carousel-inner {
+        height: 300px;
+      }
+    }
+  </style>
 </head>
 <body>
-  
-<nav class="navbar navbar-expand-lg navbar-custom">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">THE LUXURY WORLD</a>
-        <form class="d-flex ms-auto" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
 
-  
-  
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">THE LUXURY WORLD</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <form class="d-flex ms-auto" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-light" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
   <!-- Carousel -->
   <div id="luxuryCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="2025-bmw-m5-139-667b0f49f2fca (1).avif" class="d-block w-100" alt="Car 1">
+        <img src="1.jpg" class="d-block w-100" alt="BMW M5 ">
       </div>
       <div class="carousel-item">
-        <img src="D-8WJU7I-scaled (1) 2.jpeg" class="d-block w-100" alt="Car 2">
+        <img src="2.jpg" class="d-block w-100" alt="LAMBORGINI">
       </div>
       <div class="carousel-item">
-        <img src="Audi_R8_131dc8710b 3.png" class="d-block w-100" alt="Car 3">
+        <img src="4.jpg" class="d-block w-100" alt="AUDI ">
       </div>
-
-
-      
       <div class="carousel-item">
-        <img src="Shelby-GT500SE_HeroBanner 4.jpg" class="d-block w-100" alt="Car 2">
+        <img src="3.jpg" class="d-block w-100" alt="MUSTANG">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#luxuryCarousel" data-bs-slide="prev">
@@ -131,71 +120,73 @@ footer a:hover {
     </button>
   </div>
 
-
   <!-- Hero Section -->
-  <div class="container-fluid p-5 text-white text-center bg-image" style="
-  background-image: url('Audi_R8_131dc8710b\ 3.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100vh;
-">
-  <h1 class="display-4">Drive the Dream</h1>
-  <p class="lead"><b>Explore high-performance cars from luxury brands like Mustang, Audi, BMW, and Lamborghini.</b></p>
-  <a href="#shop" class="btn btn-warning btn-lg mt-3">Dream Collection</a>
-</div>
-
-
-
-<div id="shop" class="row g-4">
-  <!-- Mustang -->
-  <div class="col-md-6 col-lg-3">
-    <div class="card h-100 shadow-sm border-0 rounded-4" style="background-color: #f0f9ff;">
-      <img src="pexels-introspectivedsgn-18038881.jpg" class="card-img-top rounded-top-4 object-fit-cover" style="height: 200px;" alt="Mustang">
-      <div class="card-body d-flex flex-column">
-        <h5 class="card-title fw-bold text-primary">Mustang</h5>
-        <p class="card-text text-muted">The Ford Mustang Shelby is known for raw power and bold design.</p>
-        <a href="https://www.shelby.com/Vehicles/GT500-Signature-Edition" class="btn btn-outline-primary mt-auto">Shop Now</a>
-      </div>
+  <div class="container-fluid text-white text-center d-flex align-items-center justify-content-center" style="
+    background-image: url('Audi_R8_131dc8710b 3.png');
+    background-size: 600PX cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+  ">
+    <div class="bg-dark bg-opacity-50 p-5 rounded">
+      <h1 class="display-4">Drive the Dream</h1>
+      <p class="lead fw-bold">Explore high-performance cars from luxury brands like Mustang, Audi, BMW, and Lamborghini.</p>
+      <a href="#shop" class="btn btn-warning btn-lg mt-3">Dream Collection</a>
     </div>
   </div>
 
-  <!-- Audi -->
-  <div class="col-md-6 col-lg-3">
-    <div class="card h-100 shadow-sm border-0 rounded-4" style="background-color: #f8f9fa;">
-      <img src="pexels-evelin-rotaru-66350907-31414138.jpg" class="card-img-top rounded-top-4 object-fit-cover" style="height: 200px;" alt="Audi">
-      <div class="card-body d-flex flex-column">
-        <h5 class="card-title fw-bold text-primary">Audi</h5>
-        <p class="card-text text-muted">Audi Sport combines technology and luxury into the perfect machine.</p>
-        <a href="https://www.audiusa.com/en/models/r8/r8-heritage/2024/overview/" class="btn btn-outline-primary mt-auto">Shop Now</a>
+  <!-- Shop Section -->
+  <div id="shop" class="container my-5">
+    <div class="row g-4">
+      <!-- Mustang -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm border-0 rounded-4">
+          <img src="pexels-introspectivedsgn-18038881.jpg" class="card-img-top rounded-top-4 object-fit-cover" style="height: 200px;" alt="Mustang">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold text-warning">Mustang</h5>
+            <p class="card-text">The Ford Mustang Shelby is known for raw power and bold design.</p>
+            <a href="https://www.shelby.com/Vehicles/GT500-Signature-Edition" class="btn btn-outline-primary mt-auto">Shop Now</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
 
-  <!-- BMW -->
-  <div class="col-md-6 col-lg-3">
-    <div class="card h-100 shadow-sm border-0 rounded-4" style="background-color: #fffbea;">
-      <img src="pexels-adaptphotos-9317947.jpg" class="card-img-top rounded-top-4 object-fit-cover" style="height: 200px;" alt="BMW">
-      <div class="card-body d-flex flex-column">
-        <h5 class="card-title fw-bold text-primary">BMW</h5>
-        <p class="card-text text-muted">Precision meets performance in the BMW M5 luxury sedan.</p>
-        <a href="https://www.bmw-m.com/en/all-models/overview-m-and-m-performance/bmw-m5-sedan/2024/bmw-m5-sedan.html" class="btn btn-outline-primary mt-auto">Shop Now</a>
+      <!-- Audi -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm border-0 rounded-4">
+          <img src="pexels-evelin-rotaru-66350907-31414138.jpg" class="card-img-top rounded-top-4 object-fit-cover" style="height: 200px;" alt="Audi">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold text-warning">Audi</h5>
+            <p class="card-text">Audi Sport combines technology and luxury into the perfect machine.</p>
+            <a href="https://www.audiusa.com/en/models/r8/r8-heritage/2024/overview/" class="btn btn-outline-primary mt-auto">Shop Now</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
 
-  <!-- Lamborghini -->
-  <div class="col-md-6 col-lg-3">
-    <div class="card h-100 shadow-sm border-0 rounded-4" style="background-color: #e8fff1;">
-      <img src="pexels-autorecords-10394786.jpg" class="card-img-top rounded-top-4 object-fit-cover" style="height: 200px;" alt="Lamborghini">
-      <div class="card-body d-flex flex-column">
-        <h5 class="card-title fw-bold text-primary">Lamborghini</h5>
-        <p class="card-text text-muted">The epitome of speed and luxury, crafted in Italy.</p>
-        <a href="https://www.lamborghini.com/en-en" class="btn btn-outline-primary mt-auto">Shop Now</a>
+      <!-- BMW -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm border-0 rounded-4">
+          <img src="pexels-adaptphotos-9317947.jpg" class="card-img-top rounded-top-4 object-fit-cover" style="height: 200px;" alt="BMW">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold text-warning">BMW</h5>
+            <p class="card-text">Precision meets performance in the BMW M5 luxury sedan.</p>
+            <a href="https://www.bmw-m.com/en/all-models/overview-m-and-m-performance/bmw-m5-sedan/2024/bmw-m5-sedan.html" class="btn btn-outline-primary mt-auto">Shop Now</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Lamborghini -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm border-0 rounded-4">
+          <img src="pexels-autorecords-10394786.jpg" class="card-img-top rounded-top-4 object-fit-cover" style="height: 200px;" alt="Lamborghini">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold text-warning">Lamborghini</h5>
+            <p class="card-text ">The epitome of speed and luxury, crafted in Italy.</p>
+            <a href="https://www.lamborghini.com/en-en" class="btn btn-outline-primary mt-auto">Shop Now</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
   <!-- Footer -->
   <footer class="bg-dark text-white pt-4">
@@ -211,7 +202,7 @@ footer a:hover {
           </ul>
         </div>
         <div class="col-md-3">
-          <h5>located </h5>
+          <h5>Located</h5>
           <ul class="list-unstyled">
             <li>Banjara Hills, Hyderabad</li>
             <li>Andheri East, Mumbai</li>
@@ -224,7 +215,7 @@ footer a:hover {
           <ul class="list-unstyled">
             <li>702-942-7325</li>
             <li>1800 102 2269</li>
-            <li> 051 959 7611</li>
+            <li>051 959 7611</li>
             <li>832-865-4219</li>
           </ul>
         </div>
